<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/linenbg"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fshtank.wordparty.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/mainTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/start_word"
        android:textColor="#000040"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/teamAScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="19dp"
        android:text="@string/team_a_score"
        android:textColor="#000040"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/teamBScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:text="@string/team_b_score"
        android:textColor="#000040"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="19dp"
        android:text="@string/high_score"
        android:textColor="#000040"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/soloScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:text="@string/solo_score"
        android:textColor="#000040"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/startButton"
        style="@style/back_btn"        
        android:layout_above="@+id/countdownTextView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/yellow_menu_btn"
        android:minHeight="30dip"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/passButton"
        style="@style/main_menu_btn"
        android:layout_above="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/red_menu_btn"
        android:soundEffectsEnabled="false"
        android:text="@string/pass_button" />

    <Button
        android:id="@+id/nextButton"
        style="@style/main_menu_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_menu_btn"
        android:soundEffectsEnabled="false"
        android:text="@string/next_button" />

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/countdown"
        android:textColor="#000040"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>