<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linenbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fshtank.wordparty.StartActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/soloPlayButton"
        style="@style/main_menu_btn"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/yellow_menu_btn"
        android:soundEffectsEnabled="false"
        android:text="@string/soloplay_button" />

    <Button
        android:id="@+id/teamPlayButton"
        style="@style/main_menu_btn"
        android:layout_below="@+id/soloPlayButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/yellow_menu_btn"
        android:soundEffectsEnabled="false"
        android:text="@string/teamplay_button" />

    <Button
        android:id="@+id/howToButton"
        style="@style/main_menu_btn"
        android:layout_below="@+id/teamPlayButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/yellow_menu_btn"
        android:soundEffectsEnabled="false"
        android:text="@string/howto_button" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/logo5" />

</RelativeLayout>