<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linenbg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/categoriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/categories"
            android:textColor="#000040"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/movies_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:gravity="center"
                    android:padding="10dip"
                    android:soundEffectsEnabled="false"
                    android:text="@string/movies_button" />

                <Button
                    android:id="@+id/tv_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:gravity="center"
                    android:padding="10dip"
                    android:soundEffectsEnabled="false"
                    android:text="@string/tv_button" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/words_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:soundEffectsEnabled="false"
                    android:text="@string/words_button" />

                <Button
                    android:id="@+id/kids_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:soundEffectsEnabled="false"
                    android:text="@string/kids_button" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/people_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:soundEffectsEnabled="false"
                    android:text="@string/people_button" />

                <Button
                    android:id="@+id/nouns_button"
                    style="@style/main_menu_btn"
                    android:layout_width="0dip"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_menu_btn"
                    android:soundEffectsEnabled="false"
                    android:text="@string/nouns_button" />
            </TableRow>

            
        </TableLayout>
    </ScrollView>

</LinearLayout>